<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center">

            <ImageView
                android:src="@drawable/ic_cargo_logo"
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />

            <TextView

                android:textAppearance="?android:textAppearance"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cargomart_description"
                android:padding="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_register"
                android:text="@string/text_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            <Button
                android:id="@+id/button_login"
                android:text="@string/text_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:background="@null"
                android:text="@string/text_btn_look_around"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_look_around"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
