<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ic_cargo_logo"
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cargomart_description"
                android:padding="8dp"
                android:textSize="18sp"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_login"
                    android:text="ul_car_o@m.ru"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="32"
                    android:hint="@string/text_password"
                    android:text="123456"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:padding="8dp"

                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:id="@+id/button_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_forgot_password"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:text="@string/text_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <TextView
            android:textAppearance="?android:textAppearance"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:padding="8dp"
            />
    </LinearLayout>
</ScrollView>
